--- a/CoreNLP_JavaBot/ReadME
+++ b/CoreNLP_JavaBot/ReadME
@@ -36,4 +36,15 @@ Processes
 - the editDistance method is used to help with typos and mistakes form user input, which makes the bot response system more
 	durable. 
 
+ChatBot
+ - This is where the GUI functionality was programmed, we used JFrame to hold a chatBot area, and an Analysis area, at the bottom 
+	there is a textField for User Input and send/analyze Buttons. The GUI is split by using splitPane function , the user has the option
+	to close Analysis area if they wish.
+ - the send actionListener is where we collect user input and append it to the chatArea, we also use processInput and analyzeText from previous classes
+	to analyze each line of input, and give the proper response from the Bot. The Analysis is on the Right-Hand side which will show
+	annotations and sentiment, and Named Entity Recognitions each time they appear. 
+  MAIN 
+	the main method uses invokeLater to make sure that all other GUI functions are called first , and a messageDialog with instructions to the User on 
+	how the chatbot Works. 
+
 
